# CP-MoAKB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Run_CP-MoAKB.bat  SECURITY.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  knowledge-explorer-pages.yml
CP-MoAKB-Engine-Starter/: README.md  pyproject.toml  requirements.txt
CP-MoAKB-Engine-Starter/CP-MoAKB/: LICENSE  README.md
cpmoakb/: __init__.py  _version.py  runtime_api.py
docs/: AI_ONBOARDING.md  DATA_GOVERNANCE.md  DECISION_ENGINE.md  DEVELOPMENT.md  DOMAIN_MODEL.md  EVIDENCE_LEVELS.md  FIELD_KNOWLEDGE_POLICY.md  KNOWLEDGE_GRAPH.md  PRODUCT_VISION.md  PROJECT_CONTEXT.md  README.md  ROADMAP_2.0.md  SOURCE_POLICY.md  VALIDATION.md  glossary.md
examples/: README.md  __init__.py  _support.py  examples.json
release/: release-readiness.json
scripts/: retrieve_irac_reference.py  verify_distribution.py  verify_documentation.py  verify_examples.py  verify_installation.py  verify_release_candidate.py  verify_release_readiness.py  verify_security_contract.py
tests/: test_csv_exporter.py  test_import_engine.py  test_irac_golden_baseline.py  test_irac_parser.py  test_irac_validator.py  test_reference_retrieval.py  test_sqlite_builder.py
tools/: generate_irac_golden_baseline.py  generate_schema.py  validate_irac.py
validation/: Active_Ingredient.csv  Chemical_Class.csv  MoA_Group.csv  VALIDATION_REPORT.md
(+527 files in other folders)
